--- a/css/global.css
+++ b/css/global.css
@@ -3,13 +3,8 @@
   --padding: 1rem;
   --light: #ffffff;
   --black: #181414;
+  --midnight: #100e17;
   --alert: red;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
 *,
@@ -21,6 +16,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -29,22 +28,15 @@ body {
   background: #343a40;
 }
 
-header {
-  background-color: pink;
-  display: none;
-  /* grid-row: 1;
-  grid-column: 1 / -1; */
-}
-main {
-  /* grid-row: 2;
-  grid-column: 1 / -1; */
-}
-
-footer {
-  /* grid-row: 3;
-  grid-column: 1 / -1; */
-  background-color: pink;
-  display: none;
+.header,
+.footer {
+  /* padding: var(--padding); */
+  background: var(--midnight);
+  color: var(--light);
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 p,
@@ -142,4 +134,8 @@ p {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
