--- a/css/ui.css
+++ b/css/ui.css
@@ -1,10 +1,52 @@
 /* --------------------------- UI ---------------------------  */
+nav {
+  top: 0;
+  padding: var(--padding);
+  width: 100%;
+  color: var(--light);
+  justify-content: end;
+  font-weight: 700;
+  font-size: var(--font-size-h1);
+  gap: 2rem;
+}
+
+nav a {
+  transition: all 1s ease;
+}
+nav a:hover,
+nav a:focus {
+  color: #009688;
+}
+
+.card {
+  width: 100vw;
+  height: 100vh;
+  /* background: rgb(20, 50, 100, 0.8); */
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("/img/background1.jpg") no-repeat center center/cover;
+  /* position: sticky;
+  top: 0; */
+}
+/* 
+.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+} */
 
 .flip-card {
   position: relative;
-  height: 300px;
+  width: 400px;
   aspect-ratio: 16/9;
   perspective: 3200px;
+  margin: 10px;
 }
 
 .flip-card__front-side,
@@ -39,28 +81,54 @@
   transform: rotateX(0deg);
 }
 
-.card-wrapper {
+.flip-card-wrapper {
   display: flex;
   justify-content: space-around;
   /* gap: 2rem; */
   /* padding: 2rem; */
 }
 
-.card-img {
+.flip-card-img {
   display: flex;
-  height: 280px;
+  height: 150px;
   width: auto;
   object-fit: cover;
   border-radius: 15px;
   /* left: 10px; */
   bottom: 0;
+  justify-content: center;
+  align-items: center;
 }
 
-.card-text-container {
+.flip-card-text-container {
   padding: 2rem;
 }
 
 i {
   font-size: var(--font-size-h2);
-  color: hsl(215.9, 30%, 80%);
+  color: #fff;
+  display: block;
+}
+
+/* ---------BUTTON----------- */
+#backToTop {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  line-height: 50px;
+  text-align: center;
+  background: #0078d7;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+#backToTop:hover {
+  background: #0056b3;
 }
