--- a/css/ui.css
+++ b/css/ui.css
@@ -1,10 +1,22 @@
 /* --------------------------- UI ---------------------------  */
+
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  width: 100%;
+  height: 200px;
+}
+
+.header-wrapper img {
+height: 100%;
+}
+
 nav {
   top: 0;
   padding: var(--padding);
-  width: 100%;
-  color: var(--light);
-  justify-content: end;
+  /* width: 100%; */
+  /* justify-content: end; */
   font-weight: 700;
   font-size: var(--font-size-h1);
   gap: 2rem;
@@ -12,6 +24,7 @@ nav {
 
 nav a {
   transition: all 1s ease;
+  color: snow;
 }
 nav a:hover,
 nav a:focus {
@@ -22,11 +35,12 @@ nav a:focus {
   width: 100vw;
   height: 100vh;
   /* background: rgb(20, 50, 100, 0.8); */
-  color: white;
+  /* color: white; */
   display: flex;
   justify-content: center;
   align-items: center;
   background: url("/img/background1.jpg") no-repeat center center/cover;
+  flex-wrap: wrap;
   /* position: sticky;
   top: 0; */
 }
@@ -43,7 +57,7 @@ nav a:focus {
 
 .flip-card {
   position: relative;
-  width: 400px;
+  height: 150px;
   aspect-ratio: 16/9;
   perspective: 3200px;
   margin: 10px;
