--- a/css/ui.css
+++ b/css/ui.css
@@ -9,7 +9,7 @@
 }
 
 .header-wrapper img {
-height: 100%;
+  height: 100%;
 }
 
 nav {
@@ -34,31 +34,27 @@ nav a:focus {
 .card {
   width: 100vw;
   height: 100vh;
-  /* background: rgb(20, 50, 100, 0.8); */
-  /* color: white; */
   display: flex;
   justify-content: center;
-  align-items: center;
-  background: url("/img/background1.jpg") no-repeat center center/cover;
-  flex-wrap: wrap;
-  /* position: sticky;
-  top: 0; */
-}
-/* 
-.card-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
+  position: sticky;
   top: 0;
-  left: 0;
-  z-index: -1;
-} */
+  color: var(--light);
+  background: linear-gradient(
+    65deg,
+    var(--midnight),
+    var(--dark),
+    var(--brighter)
+  );
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  /* background: var(--midnight); */
+  /* background: url("/img/background3.jpg") no-repeat top right/cover; */
+}
 
 .flip-card {
   position: relative;
-  height: 150px;
-  aspect-ratio: 16/9;
+  height: 400px;
+  aspect-ratio: 2/3;
   perspective: 3200px;
   margin: 10px;
 }
@@ -72,57 +68,79 @@ nav a:focus {
   box-shadow: 4px 12px 40px 6px rgba(0, 0, 0, 0.09);
   transition: transform 1s ease-in-out;
   backface-visibility: hidden;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .flip-card__front-side {
-  transform: rotateX(0deg);
-  background: whitesmoke;
-  color: black;
+  transform: rotateY(0deg);
+  background: url("/img/flip-card.jpg");
 }
 
 .flip-card__back-side {
-  transform: rotateX(-180deg);
-  background: #100e17;
-  color: whitesmoke;
+  transform: rotateY(-180deg);
+  border-radius: 40px 40px 15px 15px;
+}
+
+.pe1 {
+  background: url("/img/pe1.jpg");
+}
+
+.sp1 {
+  background: url("/img/sp1.jpg");
+}
+
+.cross-course {
+  background: url("/img/cross-course.jpg");
+}
+
+.flip-card__front-side,
+.pe1,
+.sp1,
+.cross-course {
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .flip-card:hover .flip-card__front-side {
-  transform: rotateX(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-card:hover .flip-card__back-side {
-  transform: rotateX(0deg);
+  transform: rotateY(0deg);
 }
 
 .flip-card-wrapper {
   display: flex;
-  justify-content: space-around;
-  /* gap: 2rem; */
-  /* padding: 2rem; */
 }
 
-.flip-card-img {
-  display: flex;
-  height: 150px;
-  width: auto;
-  object-fit: cover;
-  border-radius: 15px;
-  /* left: 10px; */
-  bottom: 0;
-  justify-content: center;
-  align-items: center;
+.text-container {
+  max-width: 50rem;
+  padding: 2rem;
+  align-items: end;
 }
 
 .flip-card-text-container {
   padding: 2rem;
+  background: rgba(0, 0, 0, 0.6);
+
+  justify-content: end;
+  align-items: start;
+  height: 100%;
+}
+.flip-card-text-container a {
+  color: var(--light);
+}
+
+.flip-card-text-container a:hover {
+  color: pink;
 }
 
 i {
-  font-size: var(--font-size-h2);
-  color: #fff;
+  font-size: var(--font-size-h3);
+  color: var(--light);
   display: block;
 }
+
 .profile-img {
   width: 20rem;
   height: 20rem;
@@ -131,7 +149,6 @@ i {
   margin: 0 auto;
   display: block;
 }
-
 
 /* ---------BUTTON----------- */
 #backToTop {
@@ -156,15 +173,13 @@ i {
   background: #0056b3;
 }
 
-
-
 .login-container,
 .form-container {
   max-width: 544px;
   width: 100%;
   margin: 0 auto;
   padding: var(--padding);
-  background-color: var(--light);
+  background-color: transparent;
   color: var(--primary);
 }
 
