--- a/css/global.css
+++ b/css/global.css
@@ -25,7 +25,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
-  background: #343a40;
+  background: linear-gradient(
+    65deg,
+    var(--midnight),
+    var(--dark),
+    var(--brighter)
+  );
 }
 
 main {
