--- a/css/media.css
+++ b/css/media.css
@@ -19,6 +19,12 @@
     --padding: 1rem;
   }
 
+  header {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
   .about-me {
     flex-wrap: wrap;
   }
