--- a/css/global.css
+++ b/css/global.css
@@ -52,9 +52,16 @@ header {
 /* main {
 } */
 
-.header,
-.footer {
- 
+footer {
+  position: static;
+  bottom: 0;
+  width: 100%;
+  height: 300px;
+  background: var(--midnight);
+  color: var(--light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 p,
