--- a/css/ui.css
+++ b/css/ui.css
@@ -311,7 +311,7 @@ textarea:focus {
   color: var(--alert);
 }
 
-
+.back-to-top,
 .form-button {
   font-size: var(--font-size-h3);
   background-color: var(--light);
@@ -327,7 +327,7 @@ textarea:focus {
   transition: all 0.5s ease-in-out;
 }
 
-
+.back-to-top,
 .form-button:hover {
   background: linear-gradient(
     -135deg,
@@ -339,4 +339,24 @@ textarea:focus {
   width: 50%;
   transform: 1s ease-in-out;
   border: none;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 60%;
+  height: 100%;
+}
+
+.footer-content i {
+font-size: var(--font-size-h1);
+transition: all 1s ease-in-out;
+}
+
+.footer-content i:hover {
+  color: var(--shades);
+  cursor: pointer;
+  transform: rotate(-360deg);
+  scale: 1.3;
 }
