--- a/css/ui.css
+++ b/css/ui.css
@@ -232,29 +232,29 @@ i {
 }
 
 /* Back To Top Button */
-#backToTop {
+.back-to-top {
   position: fixed;
   bottom: 20px;
   right: 20px;
   display: none;
-  width: 50px;
+  width: 100px;
   height: 50px;
-  font-size: 18px;
-  line-height: 50px;
-  text-align: center;
-  background: #0078d7;
-  color: white;
+  font-size: var(--font-size-h3);
+  color: var(--light);
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  border-radius: 10px;
+  /* padding: var(--padding); */
   z-index: 100;
+  background: var(--shades);
+  align-self: center;
 }
 
-#backToTop:hover {
-  background: #0056b3;
+.back-to-top:hover {
+  transform: 1s ease-in-out;
+  scale: 1.1;
 }
 
-.login-container,
+
 .form-container {
   max-width: 600px;
   width: 100%;
@@ -311,7 +311,7 @@ textarea:focus {
   color: var(--alert);
 }
 
-.back-to-top,
+
 .form-button {
   font-size: var(--font-size-h3);
   background-color: var(--light);
@@ -327,7 +327,7 @@ textarea:focus {
   transition: all 0.5s ease-in-out;
 }
 
-.back-to-top,
+
 .form-button:hover {
   background: linear-gradient(
     -135deg,
@@ -340,6 +340,7 @@ textarea:focus {
   transform: 1s ease-in-out;
   border: none;
 }
+
 
 .footer-content {
   display: flex;
