--- a/css/global.css
+++ b/css/global.css
@@ -52,9 +52,8 @@ header {
 /* main {
 } */
 
-footer {
-  position: static;
-  bottom: 0;
+.footer {
+  /* bottom: 0; */
   width: 100%;
   height: 300px;
   background: var(--midnight);
