--- a/css/global.css
+++ b/css/global.css
@@ -36,31 +36,22 @@ body {
   );
 }
 
-header {
-  position: sticky;
-  top: 0;
+.header,
+.footer {
+  /* position: sticky; */
+  /* top: 0; */
   z-index: 9999999;
   color: var(--light);
   height: 200px;
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 10vh; */
   background: var(--midnight);
-}
-
-/* main {
-} */
-
-.footer {
-  /* bottom: 0; */
-  width: 100%;
-  height: 300px;
-  background: var(--midnight);
-  color: var(--light);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+.footer {
+  height: 300px;
 }
 
 p,
