--- a/css/global.css
+++ b/css/global.css
@@ -27,7 +27,7 @@ html {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 100vh;
+  /* height: 100vh; */
   background: linear-gradient(
     65deg,
     var(--shades),
@@ -49,9 +49,10 @@ body {
   align-items: center;
 }
 
-footer {
-  position: static;
+.footer {
   height: 300px;
+  /* bottom: 0;
+  position: sticky; */
 }
 
 p,
