--- a/css/global.css
+++ b/css/global.css
@@ -27,7 +27,7 @@ html {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* height: 100vh; */
+  height: 100vh;
   background: linear-gradient(
     65deg,
     var(--shades),
@@ -36,23 +36,30 @@ body {
   );
 }
 
-.header,
-.footer {
-  /* position: sticky; */
-  /* top: 0; */
-  z-index: 9999999;
+header,
+footer {
+  position: fixed;
+  z-index: 999;
   color: var(--light);
-  height: 200px;
-  background: var(--midnight);
+  background-color: var(--midnight);
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
-.footer {
-  height: 300px;
-  /* bottom: 0;
-  position: sticky; */
+header {
+  height: 150px;
+  top: 0;
+}
+
+footer {
+  height: 200px;
+  bottom: 0;
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+  opacity: 0; /* Starter som usynlig */
+  transform: translateY(100%);
 }
 
 p,
