--- a/css/global.css
+++ b/css/global.css
@@ -28,12 +28,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
-  background: linear-gradient(
+  /* background: linear-gradient(
     65deg,
     var(--shades),
     var(--dark),
     var(--brighter)
-  );
+  ); */
 }
 
 header,
@@ -58,7 +58,7 @@ footer {
   height: 200px;
   bottom: 0;
   transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-  opacity: 0; /* Starter som usynlig */
+  opacity: 0;
   transform: translateY(100%);
 }
 
