--- a/css/ui.css
+++ b/css/ui.css
@@ -4,9 +4,10 @@
 
 .footer-content {
   display: flex;
-  width: 60%;
+  width: 40%;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin: 0 auto;
 }
 
 .footer-content i {
@@ -18,7 +19,7 @@
   color: var(--shades);
   cursor: pointer;
   transform: rotate(-360deg);
-  scale: 1.3;
+  scale: 1.2;
 }
 
 .main-nav {
@@ -66,11 +67,11 @@
 
 .card {
   width: 100vw;
-  /* max-height: 100vh; */
+  min-height: 100vh;
   height: 100vh;
   display: flex;
   justify-content: center;
-  position: sticky;
+  /* position: sticky; */
   /* top: 200px; */
   color: var(--light);
   background: linear-gradient(
@@ -79,8 +80,9 @@
     var(--dark),
     var(--brighter)
   );
-  opacity: 0.9;
+  /* opacity: 0.9; */
   transition: opacity 0.5s ease-in-out;
+  overflow: hidden;
 }
 
 /* -------------- ABOUT ME------------------ */
@@ -286,21 +288,21 @@ i {
 .form-container {
   max-width: 600px;
   width: 100%;
-  margin: 0 auto;
+  margin-bottom: 250px;
   padding: var(--padding);
   background-color: transparent;
   color: var(--primary);
 }
 
 form div {
-  margin: 10px 3rem;
+  margin: 10px;
 }
 
 input,
 textarea {
   background-color: var(--dark);
   color: var(--light);
-  border: 2px solid var(--dark);
+  border: 2px solid var(--brighter);
   border-radius: 10px;
   display: block;
   font-size: var(--font-size-p);
