--- a/css/global.css
+++ b/css/global.css
@@ -28,12 +28,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
-  /* background: linear-gradient(
+  background: linear-gradient(
     65deg,
     var(--shades),
     var(--dark),
     var(--brighter)
-  ); */
+  );
 }
 
 header,
@@ -44,7 +44,7 @@ footer {
   background-color: var(--midnight);
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
 }
