--- a/css/media.css
+++ b/css/media.css
@@ -33,11 +33,21 @@
   footer {
     height: 100px;
   }
-  .card {
+  .page {
     display: flex;
     flex-direction: column;
+    min-height: 100svh;
+    height: auto;
   }
 
+  /* .profile-img-container {
+    width: 100%;
+    height: auto;
+  } */
+
+  .header-logo img {
+    height: 80px;
+  }
   .menu-toggle {
     display: block;
     font-size: 3rem;
@@ -128,12 +138,11 @@
   .flip-card {
     position: relative;
     max-height: 500px;
-    height: 100%;
+    height: 90%;
     width: 85%;
-    aspect-ratio: 3/2;
+    aspect-ratio: 5/8;
     perspective: 3200px;
     margin: 10px;
-    /* object-fit: cover; */
   }
 
   .flip-card__front-side {
