--- a/css/global.css
+++ b/css/global.css
@@ -41,7 +41,7 @@ footer {
   position: fixed;
   z-index: 999;
   color: var(--light);
-  background-color: var(--midnight);
+  background-color: var(--dark);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -50,7 +50,7 @@ footer {
 }
 
 header {
-  height: 150px;
+  height: 100px;
   top: 0;
 }
 
