--- a/css/media.css
+++ b/css/media.css
@@ -45,7 +45,7 @@
     height: 80px;
     margin-left: 20px;
   }
-
+  /* ----------------- Navigation Styling ----------------- */
   .menu-toggle {
     display: block;
     font-size: 3rem;
@@ -83,34 +83,20 @@
     position: fixed;
   }
 
-  nav a.active {
-    border-radius: 0;
-  }
-
   nav {
     top: 0;
     /* padding: var(--padding); */
-    font-weight: 700;
+    font-weight: 800;
     font-size: var(--font-size-h1);
     gap: 2rem;
   }
 
-  nav a {
-    transition: all 1s ease;
-    color: snow;
-  }
-
-  nav a:hover,
-  nav a:focus {
-    color: var(--shades);
-  }
-
-  nav a.active {
+  /* nav a.active {
     background-color: var(--light);
     color: var(--dark);
     border-radius: 10px 10px 0 0;
     font-weight: 600;
-  }
+  } */
 
   .fa-bars,
   .fa-xmark {
@@ -127,7 +113,10 @@
   .profile-img {
     display: block;
   }
-
+  .profile-img-container {
+    width: 15rem;
+    height: 15rem;
+  }
   .h1-background {
     justify-content: center;
     align-self: center;
