--- a/css/ui.css
+++ b/css/ui.css
@@ -37,26 +37,28 @@
 }
 /* ----------------- Navigation Styling ----------------- */
 
-.navigation {
-  list-style: none;
-}
-
+.navigation,
 .navigation ul {
   list-style: none;
 }
 
-.home,
 .navigation a {
   text-decoration: none;
   color: var(--light);
   padding: 10px;
   display: block;
+  transition: all 1s ease;
 }
 
-.home,
-.navigation a:hover {
+.navigation a:hover,
+.navigation a:focus {
   color: var(--shades);
 }
+
+/* .navigation a.active {
+  text-decoration: underline;
+  color: var(--shades);
+} */
 
 .menu-toggle {
   display: none;
