--- a/css/global.css
+++ b/css/global.css
@@ -60,6 +60,7 @@ footer {
   transition: opacity 1s ease-in-out, transform 1s ease-in-out;
   opacity: 0;
   transform: translateY(100%);
+  flex-direction: column;
 }
 
 p,
@@ -166,6 +167,10 @@ p {
 }
 .bold {
   font-weight: bold;
+}
+
+.small {
+  font-size: 1rem;
 }
 .italic {
   font-style: italic;
