--- a/css/media.css
+++ b/css/media.css
@@ -32,8 +32,10 @@
     justify-content: space-between;
   }
   footer {
-    height: 100px;
+    justify-content: center;
+    align-items: center;
   }
+
   .page {
     display: flex;
     flex-direction: column;
@@ -85,18 +87,9 @@
 
   nav {
     top: 0;
-    /* padding: var(--padding); */
-    font-weight: 800;
     font-size: var(--font-size-h1);
     gap: 2rem;
   }
-
-  /* nav a.active {
-    background-color: var(--light);
-    color: var(--dark);
-    border-radius: 10px 10px 0 0;
-    font-weight: 600;
-  } */
 
   .fa-bars,
   .fa-xmark {
@@ -114,14 +107,16 @@
     display: block;
   }
   .profile-img-container {
-    width: 15rem;
-    height: 15rem;
+    width: 17rem;
+    height: 17rem;
   }
+
   .h1-background {
     justify-content: center;
     align-self: center;
     width: 80%;
   }
+
   .flip-card {
     position: relative;
     max-height: 500px;
@@ -141,7 +136,6 @@
   .flip-card__back-side {
     transform: rotateY(-180deg);
     justify-content: space-evenly;
-    background: var(--midnight);
   }
   .flip-card.is-flipped .flip-card__front-side {
     transform: rotateY(180deg);
