--- a/css/ui.css
+++ b/css/ui.css
@@ -246,28 +246,43 @@ i {
   position: absolute;
   bottom: 20px;
   right: 20px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+  width: 10%;
+  height: 2.5rem;
+  padding: 1rem 2rem;
+  border-radius: 5px;
   text-transform: uppercase;
   font-weight: var(--font-weight-700);
   background-color: var(--light);
-  text-align: center;
-  transition: all 0.5s;
+  transition: all 700ms ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--shades);
+}
+
+/* Bruk animasjonen ved hover */
+.card-button:hover {
+  border: 0;
+  width: 20%; /* Øker bredden mest */
+  height: 3rem; /* Øker høyden litt */
+  background: linear-gradient(
+    -135deg,
+    var(--shades),
+    var(--dark),
+    var(--midnight)
+  );
 }
 
 .card-button i {
   color: var(--midnight);
-  transition: transform 1s ease-in-out;
-  text-align: center;
 }
 
 .card-button:hover i {
-  transform: rotate(270deg);
+  color: var(--light);
 }
 
 .card-button:active i {
-  color: var(--shades);
+  color: var(--light);
 }
 
 /* Back To Top Button */
@@ -282,11 +297,25 @@ i {
   transition: all 1s ease-in-out;
 }
 
+.back-to-top,
+.back-to-top i {
+  margin: 0;
+  padding: 0;
+}
+
 .back-to-top i:hover {
   color: var(--shades);
   cursor: pointer;
   transform: rotate(-360deg);
 }
+
+/* Skjuler eventuelle pseudo-elementer */
+/* .back-to-top::before,
+.back-to-top::after,
+.back-to-top i::before,
+.back-to-top i::after {
+  content: none;
+} */
 
 /* ----------------- CONTACT-FORM ----------------- */
 .form-container {
