--- a/css/ui.css
+++ b/css/ui.css
@@ -178,6 +178,10 @@
   background: url("/img/cross-course.jpg");
 }
 
+.card-img-some {
+  background: url("/img/socialmedialaptop.png");
+}
+
 .card-img-pe1,
 .card-img-sp1,
 .card-img-ccp,
@@ -258,13 +262,37 @@ i {
   justify-content: center;
   align-items: center;
   color: var(--shades);
+  cursor: pointer;
+  z-index: 1;
 }
 
-/* Bruk animasjonen ved hover */
+.card-button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background: linear-gradient(
+    -135deg,
+    var(--shades),
+    var(--dark),
+    var(--midnight)
+  );
+  z-index: -1;
+  filter: blur(10px);
+  opacity: 0;
+  transition: 0.3s ease, transform 0.3s ease;
+}
+
+.card-button:hover::after {
+  opacity: 1;
+  transform: translateY(-2px);
+}
+
 .card-button:hover {
   border: 0;
-  width: 20%; /* Øker bredden mest */
-  height: 3rem; /* Øker høyden litt */
   background: linear-gradient(
     -135deg,
     var(--shades),
