resized cards and fixed text-container

--- a/css/media.css
+++ b/css/media.css
@@ -8,6 +8,10 @@
     --font-size-h3: 1.6rem;
     --padding: 2rem;
   }
+
+  .text-container {
+    margin-top: 100px;
+  }
 }
 
 @media (max-width: 600px) {
